Initial commit of my changes to Bernhard's tree