@@ -12,7 +12,8 @@
  */
 package org.openhab.binding.netatmo.internal.handler;
 
-import static org.openhab.binding.netatmo.internal.NetatmoBindingConstants.*;
+import static org.openhab.binding.netatmo.internal.NetatmoBindingConstants.CHANNEL_PLANNING;
+import static org.openhab.binding.netatmo.internal.NetatmoBindingConstants.GROUP_HOME_ENERGY;
 
 import java.util.List;
 import java.util.stream.Collectors;
@@ -22,10 +23,8 @@ import org.openhab.binding.netatmo.internal.NetatmoDescriptionProvider;
 import org.openhab.binding.netatmo.internal.api.ApiBridge;
 import org.openhab.binding.netatmo.internal.api.NetatmoException;
 import org.openhab.binding.netatmo.internal.api.dto.NAHome;
-import org.openhab.binding.netatmo.internal.api.dto.NAModule;
 import org.openhab.binding.netatmo.internal.api.dto.NARoom;
 import org.openhab.binding.netatmo.internal.api.dto.energy.Homestatus;
-import org.openhab.binding.netatmo.internal.api.dto.energy.Module;
 import org.openhab.binding.netatmo.internal.api.dto.energy.Room;
 import org.openhab.binding.netatmo.internal.channelhelper.AbstractChannelHelper;
 import org.openhab.core.i18n.TimeZoneProvider;
@@ -47,11 +46,11 @@ public class HomeEnergyHandler extends NetatmoDeviceHandler {
 
     private int setpointDefaultDuration;
     private NAHome home = new NAHome();
+
     public HomeEnergyHandler(Bridge bridge, List<AbstractChannelHelper> channelHelpers, ApiBridge apiBridge,
             TimeZoneProvider timeZoneProvider, NetatmoDescriptionProvider descriptionProvider) {
         super(bridge, channelHelpers, apiBridge, timeZoneProvider, descriptionProvider);
     }
-
 
     public NAHome getHome() {
         return home;
@@ -61,14 +60,16 @@ public class HomeEnergyHandler extends NetatmoDeviceHandler {
     protected NAHome updateReadings() throws NetatmoException {
         home = apiBridge.getHomeApi().getHomesData(config.id);
         Homestatus status = apiBridge.getHomeApi().getHomeStatus(home.getId());
-        for (Room room: status.getBody().getHome().getRooms()) {
+        for (Room room : status.getBody().getHome().getRooms()) {
             NARoom naRoom = home.getRoom(room.getId());
             naRoom.setAnticipating(room.getAnticipating());
-            naRoom.setHeating_power_request(room.getHeatingPowerRequest());
-            naRoom.setTherm_measured_temperature(room.getThermMeasuredTemperature());
-            naRoom.setOpen_window(room.getOpenWindow());
-            naRoom.setTherm_setpoint_mode(room.getThermSetpointMode());
-            naRoom.setTherm_setpoint_temperature(new Double(room.getThermSetpointTemperature()));
+            naRoom.setHeatingPowerRequest(room.getHeatingPowerRequest());
+            naRoom.setThermMeasuredTemperature(room.getThermMeasuredTemperature());
+            naRoom.setOpenWindow(room.getOpenWindow());
+            naRoom.setThermSetpointMode(room.getThermSetpointMode());
+            naRoom.setThermSetpointStartTime(room.getThermSetpointStartTime());
+            naRoom.setThermSetpointEndTime(room.getThermSetpointEndTime());
+            naRoom.setThermSetpointTemperature(Double.valueOf(room.getThermSetpointTemperature()));
         }
         ChannelUID channelUID = new ChannelUID(getThing().getUID(), GROUP_HOME_ENERGY, CHANNEL_PLANNING);
         descriptionProvider.setStateOptions(channelUID, home.getThermSchedules().stream()
